--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                             <div class="icon-box">
                                 <em class="ion-ios-settings icon-md"></em>
                             </div>
-                            <h6>Advanced Rate Control</h6>
+                            <h6>Etc</h6>
                             <p>
                                 Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Lorem ipsum dolor sit amet.
                                 Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
@@ -193,7 +193,7 @@
                             <div class="icon-box">
                                 <em class="ion-ios-cloud-upload-outline icon-md"></em>
                             </div>
-                            <h6>Unlimited Cloud Storage</h6>
+                            <h6>Etc</h6>
                             <p>
                                 Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Lorem ipsum dolor sit amet.
                                 Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
@@ -207,7 +207,7 @@
                             <div class="icon-box">
                                 <em class="ion-ios-locked-outline icon-md"></em>
                             </div>
-                            <h6>Highly Secure</h6>
+                            <h6>Etc</h6>
                             <p>
                                 Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Lorem ipsum dolor sit amet.
                                 Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
@@ -221,7 +221,7 @@
                             <div class="icon-box">
                                 <em class="ion-ios-pulse icon-md"></em>
                             </div>
-                            <h6>Unlimited Colors</h6>
+                            <h6>Etc</h6>
                             <p>
                                 Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Lorem ipsum dolor sit amet.
                                 Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
@@ -323,6 +323,34 @@
             </div>
         </div>
     </section>
+
+
+      <!-- team
+      <section class="bg-white" id="team">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-2 col-sm-8 mx-auto text-center">
+                        <h2 class="text-primary">Our Team</h2>
+                        <p class="lead pt-3">
+                        </p>
+                    </div>
+                </div>
+                <div class="row d-md-flex mt-1 text-center">
+                    <div class="team col-sm-5 mt-2 wow fadeInLeft">
+                        <img src="img/team-1.jpg" alt="Male" class="img-team img-fluid rounded-circle"/>
+                        <h5>August Kimacovich</h5>
+                        <p>CEO, Digifilter</p>
+                    </div>
+                    <div class="team col-sm-5 mt-2 wow fadeIn">
+                        <img style="" src="img/team-2.jpg" alt="Male" class="img-team img-fluid rounded-circle"/>
+                        <h5>Richard Kimacovich, M.D.</h5>
+                        <p>Research Consultant, Digifilter</p>
+                        <p>Addictions Medicine Lead, Niagara Health System</p>
+                    </div>
+           
+                </div>
+            </div>
+        </section> -->
 
     <!-- download
     <section class="bg-orange pt-0" id="download">
