--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <a class="nav-link page-scroll" href="#features">Features</a>
                 </li>
                 <li class="nav-item mr-3">
-                    <a class="nav-link page-scroll" href="#features">App</a>
+                    <a class="nav-link page-scroll" href="#theapp">App</a>
                 </li>
                 <li class="nav-item mr-3">
                     <a class="nav-link page-scroll" href="#pricing">Pre-order</a>
@@ -76,7 +76,7 @@
                         anything you can inhale. 
                     </p>
                     <p class="mt-5">
-                        <a href="#features" class="btn btn-primary mr-2 mb-2 page-scroll">Learn More</a>
+                        <a href="#first" class="btn btn-primary mr-2 mb-2 page-scroll">Learn More</a>
                         <a href="#download" class="btn btn-white mb-2 page-scroll">Join us on kickstarter</a>
                     </p>
                 </div>
@@ -86,7 +86,7 @@
 
 
     <!--team-->
-    <section class="bg-white" id="team">
+    <section class="bg-white" id="first">
         <div class="container">
             <div class="row">
                 <div class="col-md-6 col-sm-8 mx-auto text-center">
