--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
         </div>
     </section>
 
-    <section class="bg-white p-0" id="#theapp">
+    <section class="bg-white p-0" id="theapp">
         <div class="container-fluid">
             <div class="row d-md-flex mt-5">
                 <div class="col-sm-6 p-0 wow fadeInLeft">
