--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <a class="nav-link page-scroll" href="#main">Device <span class="sr-only">(current)</span></a>
                 </li> -->
                 <li class="nav-item mr-3">
-                    <a class="nav-link page-scroll" href="#team">Device</a>
+                    <a class="nav-link page-scroll" href="#device">Device</a>
                 </li>
                 <li class="nav-item mr-3">
                     <a class="nav-link page-scroll" href="#features">Features</a>
@@ -86,7 +86,7 @@
 
 
     <!--team-->
-    <section class="bg-white" id="first">
+    <section class="bg-white" id="device">
         <div class="container">
             <div class="row">
                 <div class="col-md-6 col-sm-8 mx-auto text-center">
